<resources>
    <string name="app_name">Agenda</string>
    <string name="buscar_personal">Buscar personal</string>
    <string name="add_personal">Agregar personal</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="email">Email</string>
    <string name="telefono">Telefono</string>
    <string name="edad">Edad</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">Eliminar</string>
</resources>
