<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="modelo"
            type="com.redsystemstudio.agenda.viewmodel.FormularioViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.FormularioActivity"
        android:padding="16dp">

        <EditText
            android:id="@+id/etNombre"
            android:hint="@string/nombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:text="@={modelo.nombre}" />

        <EditText
            android:id="@+id/etApellidos"
            android:hint="@string/apellidos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNombre"
            android:layout_marginTop="8dp"
            android:text="@={modelo.apellidos}" />

        <EditText
            android:id="@+id/etEmail"
            android:hint="@string/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etApellidos"
            android:layout_marginTop="8dp"
            android:text="@={modelo.email}" />

        <EditText
            android:id="@+id/etTelefono"
            android:hint="@string/telefono"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            android:layout_marginTop="8dp"
            android:text="@={modelo.telefono}" />

        <EditText
            android:id="@+id/etEdad"
            android:hint="@string/edad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTelefono"
            android:layout_marginTop="8dp"
            android:text="@={`` + modelo.edad}" />

        <Button
            android:id="@+id/btnGuardar"
            android:text="@string/guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEdad"
            android:layout_marginTop="16dp"
            android:onClick="@{()->modelo.guardarUsuario()}" />

        <Button
            android:id="@+id/btnEliminar"
            android:text="@string/eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnGuardar"
            android:layout_marginTop="16dp"
            android:onClick="@{()->modelo.eliminarUsuario()}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
