<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white" />

    <!-- Campo de Búsqueda -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:endIconDrawable="@drawable/ic_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/buscar_personal"
            android:singleLine="true"
            android:imeOptions="actionSearch" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- RecyclerView para mostrar la lista de personal -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/miRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9" />

    <!-- Botón flotante para agregar nuevo personal -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAbrirFormulario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/add_personal" />
</LinearLayout>
